--- a/watson-vcard.netlify.com/index-dark.html
+++ b/watson-vcard.netlify.com/index-dark.html
@@ -103,7 +103,7 @@
                     <div class="header-main" data-simplebar>
                         <div class="image-container">
                             <h2 class="header-name">Philip Watson</h2>
-                            <img src="img/profile-img.jpg" alt="profile-pic">
+                            <img src="my_photo.jpg" alt="profile-pic">
                         </div>
 
                         <!--Nav Menus-->
