--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                                         <li><span class="title">Freelance</span><span class="value">Available</span></li>
                                     </ul>
                                     <div class="resume-button mt-30">
-                                        <a class="btn-main" href="#">Download Resume</a>
+                                        <a class="btn-main" href="Resume (Ridoan Khan Anik).pdf" download="Resume (Ridoan Khan Anik)">Download Resume</a>
                                     </div>
                                 </div>
                             </div>
