--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <div class="header-main" data-simplebar>
                         <div class="image-container">
                             <h2 class="header-name">Ridoan Khan Anik</h2>
-                            <img src="my_photo.jpg" alt="profile-pic">
+                            <img src="img/my_photo.jpg" alt="profile-pic">
                         </div>
 
                         <!--Nav Menus-->
@@ -186,7 +186,7 @@
 
                                 <!--Signature Image-->
                                 <div class="signature mt-20">
-                                    <img src="img/signature-white.png" alt="">
+                                    <img src="img/my_signature.jpg" alt="">
                                 </div>
                             </div>
 
@@ -223,7 +223,7 @@
                             <div class="col-lg-3 col-sm-6">
                                 <div class="service-item">
                                     <div class="icon"><i class="lnr lnr-laptop"></i></div>
-                                    <h4>Web Development</h4>
+                                    <h4>API Development</h4>
                                     <p>Amet aspernatur delectus maxime ducimus similique Ratione asperiores corporis provident aut libero.</p>
                                 </div>
                             </div>
@@ -232,7 +232,7 @@
                             <div class="col-lg-3 col-sm-6">
                                 <div class="service-item">
                                     <div class="icon"><i class="lnr lnr-eye"></i></div>
-                                    <h4>Web Design</h4>
+                                    <h4>Web Development</h4>
                                     <p>Amet aspernatur delectus maxime ducimus similique Ratione asperiores corporis provident aut libero.</p>
                                 </div>
                             </div>
@@ -241,7 +241,7 @@
                             <div class="col-lg-3 col-sm-6">
                                 <div class="service-item">
                                     <div class="icon"><i class="lnr lnr-laptop-phone"></i></div>
-                                    <h4>Responsive Design</h4>
+                                    <h4>DApps Development</h4>
                                     <p>Amet aspernatur delectus maxime ducimus similique Ratione asperiores corporis provident aut libero.</p>
                                 </div>
                             </div>
@@ -250,7 +250,7 @@
                             <div class="col-lg-3 col-sm-6">
                                 <div class="service-item">
                                     <div class="icon"><i class="lnr lnr-camera"></i></div>
-                                    <h4>Photography</h4>
+                                    <h4>Front-End Development</h4>
                                     <p>Amet aspernatur delectus maxime ducimus similique Ratione asperiores corporis provident aut libero.</p>
                                 </div>
                             </div>
