title name chaged

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <meta name="author" content="portfolio (Ridoan Khan Anik)" />
 
         <!--Page Title-->
-        <title>Watson - vCard / Resume/ CV Template</title>
+        <title>Resume (Ridoan Khan Anik)</title>
 
         <!--Plugins Css-->
         <link rel="stylesheet" href="css/plugins.css">
