some contens updated

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                                 <div class="service-item">
                                     <div class="icon"><i class="lnr lnr-laptop"></i></div>
                                     <h4>API Development</h4>
-                                    <p>Amet aspernatur delectus maxime ducimus similique Ratione asperiores corporis provident aut libero.</p>
+                                    <p>Developing Node.js API with strong security and stability</p>
                                 </div>
                             </div>
 
@@ -233,7 +233,7 @@
                                 <div class="service-item">
                                     <div class="icon"><i class="lnr lnr-eye"></i></div>
                                     <h4>Web Development</h4>
-                                    <p>Amet aspernatur delectus maxime ducimus similique Ratione asperiores corporis provident aut libero.</p>
+                                    <p>Designing and Developing Responsive Websites with latest technologies</p>
                                 </div>
                             </div>
 
