--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                                 <div class="service-item">
                                     <div class="icon"><i class="lnr lnr-laptop"></i></div>
                                     <h4>API Development</h4>
-                                    <p>Developing Node.js API with strong security and stability</p>
+                                    <p style="text-align: center">Have good command over developing well structured qualituful API using MVC model that meets all the important security aspects to resist data breach</p>
                                 </div>
                             </div>
 
@@ -233,7 +233,7 @@
                                 <div class="service-item">
                                     <div class="icon"><i class="lnr lnr-eye"></i></div>
                                     <h4>Web Development</h4>
-                                    <p>Designing and Developing Responsive Websites with latest technologies</p>
+                                    <p>Designing and Developing Responsive Websites with latest as well as forthcoming technologies</p>
                                 </div>
                             </div>
 
@@ -242,7 +242,7 @@
                                 <div class="service-item">
                                     <div class="icon"><i class="lnr lnr-laptop-phone"></i></div>
                                     <h4>DApps Development</h4>
-                                    <p>Amet aspernatur delectus maxime ducimus similique Ratione asperiores corporis provident aut libero.</p>
+                                    <p style="text-align:center;">Possess potential experience in building distributed applications on Blockchain platforms that includes Ethereum and Hyperledger Fabric</p>
                                 </div>
                             </div>
 
@@ -251,7 +251,7 @@
                                 <div class="service-item">
                                     <div class="icon"><i class="lnr lnr-camera"></i></div>
                                     <h4>Front-End Development</h4>
-                                    <p>Amet aspernatur delectus maxime ducimus similique Ratione asperiores corporis provident aut libero.</p>
+                                    <p style="text-align: center">Capable of designing responsive websites that meets businees requirements and catches customers attaction</p>
                                 </div>
                             </div>
                         </div>
@@ -261,7 +261,7 @@
                         <div class="row clients mb-70">
                             <div class="col-md-12">
                                 <div class="subheading">
-                                    <h3>Clients</h3>
+                                    <h3>Certifications</h3>
                                 </div>
                             </div>
 
@@ -269,64 +269,85 @@
 
                                 <!--Client Logo-->
                                 <div class="client-logo">
-                                    <a href="#">
-                                        <img src="img/clients/client-01.png" alt="">
+                                    <a href="img/Certificates/01.jpg" target="_blank">
+                                        <img src="img/Certificates/01.jpg" alt="best_student_award(convocation 2019, Nilai University)">
                                     </a>
                                 </div>
 
                                 <!--Client Logo-->
                                 <div class="client-logo">
-                                    <a href="#">
-                                        <img src="img/clients/client-02.png" alt="">
+                                    <a href="img/Certificates/02.JPG" target="_blank">
+                                        <img src="img/Certificates/02.JPG" alt="best_student_award(convocation 2019, Nilai University)">
                                     </a>
                                 </div>
 
                                 <!--Client Logo-->
                                 <div class="client-logo">
-                                    <a href="#">
-                                        <img src="img/clients/client-03.png" alt="">
+                                    <a href="img/Certificates/03.jpg" target="_blank">
+                                        <img src="img/Certificates/03.jpg" alt="best_student_award(convocation 2019, Nilai University)">
                                     </a>
                                 </div>
 
                                 <!--Client Logo-->
                                 <div class="client-logo">
-                                    <a href="#">
-                                        <img src="img/clients/client-04.png" alt="">
+                                    <a href="img/Certificates/04.jpg" target="_blank">
+                                        <img src="img/Certificates/04.jpg" alt="best_student_award(convocation 2019, Nilai University)">
                                     </a>
                                 </div>
 
                                 <!--Client Logo-->
                                 <div class="client-logo">
-                                    <a href="#">
-                                        <img src="img/clients/client-05.png" alt="">
+                                    <a href="img/Certificates/05.JPG" target="_blank">
+                                        <img src="img/Certificates/05.JPG" alt="best_student_award(convocation 2019, Nilai University)">
                                     </a>
                                 </div>
 
                                 <!--Client Logo-->
                                 <div class="client-logo">
-                                    <a href="#">
-                                        <img src="img/clients/client-06.png" alt="">
+                                    <a href="img/Certificates/06.jpg" target="_blank">
+                                        <img src="img/Certificates/06.jpg" alt="best_student_award(convocation 2019, Nilai University)">
                                     </a>
                                 </div>
 
                                 <!--Client Logo-->
                                 <div class="client-logo">
-                                    <a href="#">
-                                        <img src="img/clients/client-07.png" alt="">
+                                    <a href="img/Certificates/07.JPG" target="_blank">
+                                        <img src="img/Certificates/07.JPG" alt="best_student_award(convocation 2019, Nilai University)">
                                     </a>
                                 </div>
 
                                 <!--Client Logo-->
                                 <div class="client-logo">
-                                    <a href="#">
-                                        <img src="img/clients/client-08.png" alt="">
+                                    <a href="img/Certificates/08.jpg" target="_blank">
+                                        <img src="img/Certificates/08.jpg" alt="best_student_award(convocation 2019, Nilai University)">
                                     </a>
                                 </div>
 
                                 <!--Client Logo-->
                                 <div class="client-logo">
-                                    <a href="#">
-                                        <img src="img/clients/client-09.png" alt="">
+                                    <a href="img/Certificates/09.JPG" target="_blank">
+                                        <img src="img/Certificates/09.JPG" alt="best_student_award(convocation 2019, Nilai University)">
+                                    </a>
+                                </div>
+
+                                <!--Client Logo-->
+                                <div class="client-logo">
+                                    <a href="img/Certificates/10.jpg" target="_blank">
+                                        <img src="img/Certificates/10.jpg" alt="best_student_award(convocation 2019, Nilai University)">
+                                    </a>
+                                </div>
+
+                                <!--Client Logo-->
+                                <div class="client-logo">
+                                    <a href="img/Certificates/11.JPG" target="_blank">
+                                        <img src="img/Certificates/11.JPG" alt="best_student_award(convocation 2019, Nilai University)">
+                                    </a>
+                                </div>
+
+                                <!--Client Logo-->
+                                <div class="client-logo">
+                                    <a href="img/Certificates/12.JPG" target="_blank">
+                                        <img src="img/Certificates/12.JPG" alt="best_student_award(convocation 2019, Nilai University)">
                                     </a>
                                 </div>
 
