--- a/index.html
+++ b/index.html
@@ -1046,14 +1046,15 @@
                                 </div>
 
                                 <!--Form Start-->
-                                <form id="contact-form" method="post" action="https://watson-vcard.netlify.com/mail.php">
+                                <form id="gform" method="POST" class="pure-form pure-form-stacked" data-email="ridoankhan07@gmail.com"
+                                action="https://script.google.com/macros/s/AKfycbze7-BRq4d4G6ZYS57uS6A7CtNhMjn06vaZGB3t/exec">
                                     <div class="row">
 
 
                                         <!--Name Field-->
                                         <div class="col-md-6 mb-50">
                                             <span class="input">
-                                                <input class="input__field cf-validate" type="text" id="cf-name" name="name" />
+                                                <input class="input__field cf-validate" type="text" id="name" name="name" />
                                                 <label class="input__label" for="cf-name">Name</label>
                                             </span>
                                         </div>
@@ -1061,7 +1062,7 @@
                                         <!--Email Field-->
                                         <div class="col-md-6 mb-50">
                                             <span class="input">
-                                                <input class="input__field cf-validate" type="text" id="cf-email" name="email" />
+                                                <input class="input__field cf-validate" type="text" id="email" name="email" />
                                                 <label class="input__label" for="cf-email">Email</label>
                                             </span>
                                         </div>
@@ -1069,7 +1070,7 @@
                                         <!--Message Box-->
                                         <div class="col-md-12 mb-30">
                                             <span class="input">
-                                                <textarea  class="input__field cf-validate" id="cf-message" name="message" rows="5" ></textarea>
+                                                <textarea  class="input__field cf-validate" id="message" name="message" rows="5" ></textarea>
                                                 <label class="input__label" for="cf-message">How can we help you?</label>
                                             </span>
                                         </div>
