contact Information Edited

--- a/index.html
+++ b/index.html
@@ -1096,19 +1096,19 @@
                             <!--Contact Info Item-->
                             <div class="col-md-4 info-item">
                                 <span class="icon"><i class="fas fa-paper-plane"></i></span>
-                                <h5><a href="mailto:example@example.com">example@example.com</a></h5>
+                                <h5><a href="mailto:example@example.com">ridoankhan07@gmail.com</a></h5>
                             </div>
 
                             <!--Contact Info Item-->
                             <div class="col-md-4 info-item">
                                 <span class="icon"><i class="fas fa-map-marker-alt"></i></span>
-                                <h5>123 Lorem Ipsum, USA</h5>
+                                <h5>157/A Distellery Road, Gandaria, Dhaka - 1204, Bangladesh</h5>
                             </div>
 
                             <!--Contact Info Item-->
                             <div class="col-md-4 info-item">
                                 <span class="icon"><i class="fas fa-phone"></i></span>
-                                <h5>(+1) 123 456 7890</h5>
+                                <h5>(+880) 1861858938 </h5>
                             </div>
 
                         </div>
