--- a/index.html
+++ b/index.html
@@ -1117,8 +1117,10 @@
                     </div>
                     <!--Google Map Start-->
                     <div class="google-map">
-                            <div id="map" data-latitude="-37.817214" data-longitude="144.955925" data-zoom="15"></div>
-                    </div>
+                            <!-- <div id="map" data-latitude="-37.817214" data-longitude="144.955925" data-zoom="15"></div> -->
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3653.1606784580526!2d90.41818589204513!3d23.705955449557678!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755b9afaa4d56b9%3A0x2572622740b7e8f4!2sKatherpol%20Bus%20Stop!5e0!3m2!1sen!2sbd!4v1578917017537!5m2!1sen!2sbd" width="1200" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+
+                        </div>
                     <!--Google Map End-->
                 </section>
                 <!--Contact Section End-->
@@ -1146,7 +1148,8 @@
         <!--Plugins JS-->
         <script src="js/plugins.min.js"></script>
         <!--Google Map Api-->
-        <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBxjdAabKFsk7CHhYq3VNKkwRyonhLHWDo"></script>
+
+        <script type="text/javascript" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3653.1606784580526!2d90.41818589204513!3d23.705955449557678!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755b9afaa4d56b9%3A0x2572622740b7e8f4!2sKatherpol%20Bus%20Stop!5e0!3m2!1sen!2sbd!4v1578917017537!5m2!1sen!2sbd"></script>
         <!--Site Main JS-->
         <script src="js/main.js"></script>
 
@@ -1154,6 +1157,5 @@
 
     </body>
 
-<!-- Mirrored from watson-vcard.netlify.com/index-dark.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 02 Jan 2020 12:19:39 GMT -->
 </html>
 
