--- a/index.html
+++ b/index.html
@@ -121,9 +121,8 @@
                         <div class="nav-footer">
                             <!--Social Links-->
                             <ul class="social">
-                                <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
-                                <li><a href="#"><i class="fab fa-twitter-square"></i></a></li>
-                                <li><a href="#"><i class="fab fa-youtube-square"></i></a></li>
+                                <li><a href="https://www.facebook.com/anik.khan.9026" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
+                                <li><a href="#"><i class="fab fa-github-square"></i></a></li>
                                 <li><a href="#"><i class="fab fa-dribbble-square"></i></a></li>
                                 <li><a href="#"><i class="fab fa-behance-square"></i></a></li>
                             </ul>
@@ -1102,7 +1101,7 @@
                             <!--Contact Info Item-->
                             <div class="col-md-4 info-item">
                                 <span class="icon"><i class="fas fa-map-marker-alt"></i></span>
-                                <h5>157/A Distellery Road, Gandaria, Dhaka - 1204, Bangladesh</h5>
+                                <h5>157/A Distillery Road, Gandaria, Dhaka - 1204, Bangladesh</h5>
                             </div>
 
                             <!--Contact Info Item-->
@@ -1118,7 +1117,7 @@
                     <!--Google Map Start-->
                     <div class="google-map">
                             <!-- <div id="map" data-latitude="-37.817214" data-longitude="144.955925" data-zoom="15"></div> -->
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3653.1606784580526!2d90.41818589204513!3d23.705955449557678!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755b9afaa4d56b9%3A0x2572622740b7e8f4!2sKatherpol%20Bus%20Stop!5e0!3m2!1sen!2sbd!4v1578917017537!5m2!1sen!2sbd" width="1200" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3653.1606784580526!2d90.41818589204513!3d23.705955449557678!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755b9afaa4d56b9%3A0x2572622740b7e8f4!2sKatherpol%20Bus%20Stop!5e0!3m2!1sen!2sbd!4v1578917017537!5m2!1sen!2sbd" width="1100" height="350" frameborder="0" style="border:0; margin-left: 35px;"  ></iframe>
 
                         </div>
                     <!--Google Map End-->
