--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                                 <li><a href="#about" class="pt-link"><span class="nav-menu-icon"><i class="lnr lnr-user"></i></span>About Me</a></li>
                                 <li><a href="#resume" class="pt-link"><span class="nav-menu-icon"><i class="lnr lnr-license"></i></span>Resume</a></li>
                                 <li><a href="#portfolio" class="pt-link"><span class="nav-menu-icon"><i class="lnr lnr-briefcase"></i></span>Portfolio</a></li>
-                                <li><a href="#blog" class="pt-link"><span class="nav-menu-icon"><i class="lnr lnr-book"></i></span>Blog</a></li>
+                                <!-- <li><a href="#blog" class="pt-link"><span class="nav-menu-icon"><i class="lnr lnr-book"></i></span>Blog</a></li> -->
                                 <li><a href="#contact" class="pt-link"><span class="nav-menu-icon"><i class="lnr lnr-envelope"></i></span>Contact</a></li>
                             </ul>
                         </nav>
@@ -732,9 +732,9 @@
                             <div class="col-md-12 portfolio-filter text-center">
                                 <ul>
                                     <li class="active" data-filter="*">All</li>
-                                    <li data-filter=".brand">Brand</li>
-                                    <li data-filter=".design">Design</li>
-                                    <li data-filter=".graphic">Graphic</li>
+                                    <li data-filter=".brand">BlockChain</li>
+                                    <li data-filter=".design">IoT</li>
+                                    <li data-filter=".graphic">Web Application</li>
                                 </ul>
                             </div>
                         </div>
@@ -746,7 +746,7 @@
                             <div class="item col-lg-4 col-sm-6 brand graphic">
                                 <a class="image-link" href="img/portfolio/img-1.jpg">
                                     <figure>
-                                        <img src="img/portfolio/img-1.jpg" alt="">
+                                        <img src="img/portfolio/11.DBBL(blockchain).png" alt="">
                                         <figcaption>
                                             <h4>Book Design</h4>
                                             <p>Graphic</p>
@@ -759,7 +759,7 @@
                             <div class="item col-lg-4 col-sm-6 design">
                                 <a class="ajax-link" href="single-work.html">
                                     <figure>
-                                        <img src="img/portfolio/img-2.jpg" alt="">
+                                        <img src="img/portfolio/12.educhain(blockchain).png" alt="">
                                         <figcaption>
                                             <h4>Notepad Design</h4>
                                             <p>Design</p>
