--- a/index.html
+++ b/index.html
@@ -20,6 +20,17 @@
         <!--Main Styles Css-->
         <link rel="stylesheet" href="css/style-dark.css">
 
+        <link rel="stylesheet" href="css/style-demo.css">
+
+        <!--Color Css-->
+        <link class="site-color" rel="stylesheet" href="css/green-color.css">
+
+        <!--Modernizr Js-->
+        <script src="js/modernizr.js"></script>
+
+        <!--Favicons-->
+        <!-- <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon"> -->
+
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122650090-3"></script>
         <script>
