--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <script src="js/modernizr.js"></script>
 
         <!--Favicons-->
-        <!-- <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon"> -->
+        <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
 
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122650090-3"></script>
