--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 
         <link rel="stylesheet" href="css/style-demo.css">
 
+        <link rel="stylesheet" href="./js/Plugins/font-awesome.min.css">
+
         <!--Color Css-->
         <link class="site-color" rel="stylesheet" href="css/green-color.css">
 
@@ -33,6 +35,7 @@
 
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122650090-3"></script>
+        <script src='./js/Plugins/font-awesome.js'></script>
         <script>
             window.dataLayer = window.dataLayer || [];
             function gtag(){dataLayer.push(arguments);}
@@ -122,9 +125,9 @@
                             <!--Social Links-->
                             <ul class="social">
                                 <li><a href="https://www.facebook.com/anik.khan.9026" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
-                                <li><a href="#"><i class="fab fa-github-square"></i></a></li>
-                                <li><a href="#"><i class="fab fa-dribbble-square"></i></a></li>
-                                <li><a href="#"><i class="fab fa-behance-square"></i></a></li>
+                                <li><a href="https://github.com/ridoankhan" target="_blank"><i class="fab fa-github-square"></i></a></li>
+                                <li><a href="https://www.hackerrank.com/ridoankhan07" target="_blank"><i class='fab fa-hackerrank' style='display: inherit;'></i></a></li>
+                                <li><a href="https://www.linkedin.com/in/ridoankhananik" target="_blank"><i class="fab fa-linkedin-square"></i></a></li>
                             </ul>
                             <!--Copyright Text-->
                             <div class="copy">
@@ -1150,6 +1153,7 @@
         <script src="js/main.js"></script>
 
         <script src="js/main-demo.js"></script>
+        
 
     </body>
 
