Certificate Problem Fixed

--- a/index.html
+++ b/index.html
@@ -314,7 +314,8 @@
                             <div class="client-logo">
                                 <a href="https://www.testdome.com/cert/df7ed91ec97c4f62b35155790d947b10"
                                     target="_blank">
-                                    <img src="img/Certificates/13.PNG" alt="Test-Dom-Javascript-Gold-Certificate">
+                                    <img src="img/Certificates/javascript-test-dom-certificate.PNG"
+                                        alt="Test-Dom-Javascript-Gold-Certificate">
                                 </a>
                             </div>
                             <!--Client Logo-->
