image path updated

--- a/index.html
+++ b/index.html
@@ -314,14 +314,14 @@
                             <div class="client-logo">
                                 <a href="https://www.testdome.com/cert/df7ed91ec97c4f62b35155790d947b10"
                                     target="_blank">
-                                    <img src="img/Certificates/javascript-test-dom-certificate.PNG"
+                                    <img src="./img/Certificates/javascript-test-dom-certificate.PNG"
                                         alt="Test-Dom-Javascript-Gold-Certificate">
                                 </a>
                             </div>
                             <!--Client Logo-->
                             <div class="client-logo">
-                                <a href="img/Certificates/best-student-award.jpg" target="_blank">
-                                    <img src="img/Certificates/best-student-award.jpg"
+                                <a href="./img/Certificates/best-student-award.jpg" target="_blank">
+                                    <img src="./img/Certificates/best-student-award.jpg"
                                         alt="best_student_award(convocation 2019, Nilai University)">
                                 </a>
                             </div>
@@ -329,39 +329,39 @@
                             <!--Client Logo-->
                             <div class="client-logo">
                                 <a href="https://www.hackerrank.com/certificates/f57831af74b5" target="_blank">
-                                    <img src="img/Certificates/hackerrank-problem-solving-basic.JPG"
+                                    <img src="./img/Certificates/hackerrank-problem-solving-basic.JPG"
                                         alt="Hackerrank problem solving basic certificate">
                                 </a>
                             </div>
 
                             <!--Client Logo-->
                             <div class="client-logo">
-                                <a href="img/Certificates/deans-list-january-2016.jpg" target="_blank">
-                                    <img src="img/Certificates/deans-list-january-2016.jpg"
+                                <a href="./img/Certificates/deans-list-january-2016.jpg" target="_blank">
+                                    <img src="./img/Certificates/deans-list-january-2016.jpg"
                                         alt="Dean's List Award (Jan-2016, Nilai University, department of computing)">
                                 </a>
                             </div>
 
                             <!--Client Logo-->
                             <div class="client-logo">
-                                <a href="img/Certificates/deans-list-may-2016.jpg" target="_blank">
-                                    <img src="img/Certificates/deans-list-may-2016.jpg"
+                                <a href="./img/Certificates/deans-list-may-2016.jpg" target="_blank">
+                                    <img src="./img/Certificates/deans-list-may-2016.jpg"
                                         alt="Dean's List Award (May-2016, Nilai University, department of computing)">
                                 </a>
                             </div>
 
                             <!--Client Logo-->
                             <div class="client-logo">
-                                <a href="img/Certificates/lict-certificate.jpg" target="_blank">
-                                    <img src="img/Certificates/lict-certificate.jpg"
+                                <a href="./img/Certificates/lict-certificate.jpg" target="_blank">
+                                    <img src="./img/Certificates/lict-certificate.jpg"
                                         alt="LICT Certificate of completion for hyperledger blockchain project">
                                 </a>
                             </div>
 
                             <!--Client Logo-->
                             <div class="client-logo">
-                                <a href="img/Certificates/blockchain-supply-chain.JPG" target="_blank">
-                                    <img src="img/Certificates/blockchain-supply-chain.JPG"
+                                <a href="./img/Certificates/blockchain-supply-chain.JPG" target="_blank">
+                                    <img src="./img/Certificates/blockchain-supply-chain.JPG"
                                         alt="Build an IoT Blockchain Network for Supply-Chain">
                                 </a>
                             </div>
@@ -370,7 +370,7 @@
                             <div class="client-logo">
                                 <a href="https://www.youracclaim.com/badges/1c50eba0-dc7c-4d7a-924a-f5258db28bd7/linked_in_profile"
                                     target="_blank">
-                                    <img src="img/Certificates/IBM-blockchain-foundation-developer.JPG"
+                                    <img src="./img/Certificates/IBM-blockchain-foundation-developer.JPG"
                                         alt="IBM Blochain Foundation for Developer">
                                 </a>
                             </div>
@@ -379,7 +379,7 @@
                             <div class="client-logo">
                                 <a href="https://www.youracclaim.com/badges/1f4dbbcb-b881-452f-a43b-fc7fc333f43f/linked_in_profile"
                                     target="_blank">
-                                    <img src="img/Certificates/blockchain-essentials.JPG"
+                                    <img src="./img/Certificates/blockchain-essentials.JPG"
                                         alt="blockchain-essentials by cognitive class IBM">
                                 </a>
                             </div>
@@ -388,7 +388,7 @@
                             <div class="client-logo">
                                 <a href="https://www.youracclaim.com/badges/715a9009-d52d-4757-b03b-6fe3cc88418d/linked_in_profile"
                                     target="_blank">
-                                    <img src="img/Certificates/machine-learning-bangldaesh-hi-tech-oark.jpg"
+                                    <img src="./img/Certificates/machine-learning-bangldaesh-hi-tech-oark.jpg"
                                         alt="Machine Learning Workshop Completion Certificate by Bangladesh Hi-tech Park Authority">
                                 </a>
                             </div>
@@ -397,7 +397,7 @@
                             <div class="client-logo">
                                 <a href="https://www.youracclaim.com/badges/2f65ecb5-9430-49e3-8d2a-61379a5d7382/linked_in_profile"
                                     target="_blank">
-                                    <img src="img/Certificates/Python-101-for-data-science.JPG"
+                                    <img src="./img/Certificates/Python-101-for-data-science.JPG"
                                         alt="Python 101 for Data Science Certificate by Cognitive Class IBM">
                                 </a>
                             </div>
@@ -405,22 +405,23 @@
                             <!--Client Logo-->
                             <div class="client-logo">
                                 <a href="img/Certificates/outward-bound.jpg" target="_blank">
-                                    <img src="img/Certificates/outward-bound.jpg"
+                                    <img src="./img/Certificates/outward-bound.jpg"
                                         alt="Outward Bound Malaysia Certificate of Completion">
                                 </a>
                             </div>
 
                             <!--Client Logo-->
                             <div class="client-logo">
-                                <a href="img/Certificates/php-certificate.JPG" target="_blank">
-                                    <img src="img/Certificates/php-certificate.JPG" alt="PHP Certificate by Solo Learn">
+                                <a href="./img/Certificates/php-certificate.JPG" target="_blank">
+                                    <img src="./img/Certificates/php-certificate.JPG"
+                                        alt="PHP Certificate by Solo Learn">
                                 </a>
                             </div>
 
                             <!--Client Logo-->
                             <div class="client-logo">
-                                <a href="img/Certificates/bitcoin-101.JPG" target="_blank">
-                                    <img src="img/Certificates/bitcoin-101.JPG"
+                                <a href="./img/Certificates/bitcoin-101.JPG" target="_blank">
+                                    <img src="./img/Certificates/bitcoin-101.JPG"
                                         alt="Bitcoin 101 by Congnitive Class IBM">
                                 </a>
                             </div>
